--- a/Makefile.in
+++ b/Makefile.in
@@ -17,15 +17,13 @@ LIBS?=
 
 
 #Creat a
-CFLAGS=$(addprefix -I,$(IDIR)) -w
+CFLAGS=$(addprefix -I,$(IDIR)) $(FLAGS)
 OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
 
 
 $(ODIR)/%.opp: %.cpp
-	echo $@
 	$(CXX) -c $< $(CFLAGS) -o $@
 $(ODIR)/%.o: %.c
-	echo $@
 	$(CXX) -c $< $(CFLAGS) -o $@
 
 
@@ -33,6 +31,7 @@ $(ODIR)/%.o: %.c
 
 
 domake: prepare  $(SUB_MAKEFILES) build_objs $(target_bin)
+	@echo Done GOAL:\"$(MAKECMDGOALS)\" `pwd` 
 
 $(target_bin):$(OBJ) $(EXT_OBJS)
 	$(CXX) $(OBJ) $(EXT_OBJS)  $(CFLAGS) $(LIBS)  -o $@
@@ -45,7 +44,8 @@ $(SUB_MAKEFILES):
 #VARS_LIST := $(.VARIABLES)
 
 prepare:
-	-mkdir $(ODIR)
+	-@mkdir -p $(ODIR)
+
 build_objs:$(OBJ)
 
 clean:$(SUB_MAKEFILES)
