NeuralLayer, neuralNet,NuralNetutil

--- a/MLNN/Makefile
+++ b/MLNN/Makefile
@@ -3,7 +3,7 @@
 ESS_TRACK= $(shell find include/*)
 IDIR=./include/
 ODIR=obj
-_OBJ = MLNN.opp
+_OBJ = MLNNUtil.opp MLNL.opp MLNN.opp
 
 
 include ../MakeFile.in
