Add momentum optimizor & transform lock (only rotate and translate)

--- a/MLNN/Makefile
+++ b/MLNN/Makefile
@@ -3,7 +3,7 @@
 ESS_TRACK= $(shell find include/*)
 IDIR=./include/
 ODIR=obj
-_OBJ = MLNNUtil.opp MLNL.opp MLNN.opp
+_OBJ = MLNNUtil.opp MLNL.opp MLNN.opp MLOpt.opp
 
 
-include ../MakeFile.in
+include ../Makefile.in
