--- a/acvImage/Makefile
+++ b/acvImage/Makefile
@@ -8,4 +8,4 @@ _OBJ = acvImage.opp acvImage_BasicTool.opp acvImage_BasicDrawTool.opp\
  acvImage_SpDomainTool.opp
 
 
-include ../MakeFile.in
+include ../Makefile.in
