--- a/Makefile.in
+++ b/Makefile.in
@@ -1,6 +1,7 @@
 ESS_TRACK?=
 target_bin?=
-ODIR?=
+target_a?=
+ODIR?=obj
 
 IDIR?=
 
@@ -30,11 +31,14 @@ $(ODIR)/%.o: %.c  $(ESS_TRACK)
 .PHONY: clean prepare $(SUB_MAKEFILES) build_objs domake
 
 
-domake: prepare  $(SUB_MAKEFILES) build_objs $(target_bin)
-	@echo Done GOAL:\"$(MAKECMDGOALS)\" `pwd` 
+domake: prepare  $(SUB_MAKEFILES) build_objs $(target_bin) $(target_a)
+	@echo Done GOAL:\"$(MAKECMDGOALS)\" `pwd`
 
 $(target_bin):$(OBJ) $(EXT_OBJS)
 	$(CXX) $(OBJ) $(EXT_OBJS)  $(CFLAGS) $(LIBS)  -o $@
+
+$(target_a):$(OBJ) $(EXT_OBJS)
+	$(AR) rvs $@ $(OBJ) $(EXT_OBJS)
 
 
 $(SUB_MAKEFILES):
@@ -44,9 +48,9 @@ $(SUB_MAKEFILES):
 #VARS_LIST := $(.VARIABLES)
 
 prepare:
-	-@mkdir -p $(ODIR)
+	-@[ ! -z "$(ODIR)" ]&&mkdir -p $(ODIR) || true
 
 build_objs:$(OBJ)
 
 clean:$(SUB_MAKEFILES)
-	rm -rf $(ODIR) *~ core $(INCDIR)/*~ $(target_bin)
+	rm -rf $(ODIR) $(target_bin) $(target_a)
