Add sample program of websocket

--- a/sidePrj/Makefile
+++ b/sidePrj/Makefile
@@ -4,5 +4,7 @@
 
 
 
-SUB_MAKEFILES = $(MODULE_acvImage) licensePlate
+#SUB_MAKEFILES = $(MODULE_acvImage) licensePlate $(MODULE_contrib) websocket
+
+SUB_MAKEFILES = websocket
 include $(MakeTemplate)
