Extract sample code logic to a more manageable class

--- a/sidePrj/websocket/Makefile
+++ b/sidePrj/websocket/Makefile
@@ -1,10 +1,10 @@
 
 target_bin = main
-IDIR = $(MODULE_cwebsocket)/lib/
+IDIR = $(MODULE_cwebsocket)/lib/ include
 VPATH = $(MODULE_cwebsocket)/lib/
 _OBJ = main.o websocket.o
 
-ESS_TRACK=
+ESS_TRACK=include/*
 export MakeTemplate:= $(abspath Makefile.in)
 export FLAGS= -w -O3
 include $(MakeTemplate)
