--- a/sidePrj/websocket/Makefile
+++ b/sidePrj/websocket/Makefile
@@ -7,4 +7,7 @@ _OBJ = main.o websocket.o
 ESS_TRACK=include/*
 export MakeTemplate:= $(abspath Makefile.in)
 export FLAGS= -w -O3
+ifeq ($(OS),Windows_NT)
+    export FLAGS+= -lws2_32
+endif
 include $(MakeTemplate)
