Move matching code into MatchingEngine. Needs further integration(fuse the matching logic in Matching engine flow)

--- a/MatchingEngine/Makefile
+++ b/MatchingEngine/Makefile
@@ -6,10 +6,11 @@ IDIR=./include/ \
 			$(MODULE_cJSON) \
 			$(MODULE_acvImage)/include \
 			$(MODULE_VisSeleFeatureManager)/include \
+			$(MODULE_circleFitting) \
 			$(MODULE_LOGCTRL)/include
 
 ODIR=obj
-_OBJ = MatchingEngine.opp
+_OBJ = MatchingEngine.opp experiment.opp
 ESS_TRACK=$(addsuffix /* ,$(IDIR))
 target_a= $(addsuffix .a ,$(MODULE_NAME))
 
