Move feature manager into Matching engine

--- a/MatchingEngine/Makefile
+++ b/MatchingEngine/Makefile
@@ -1,17 +1,15 @@
 
-
 MODULE_NAME=$(notdir $(basename $(CURDIR)))
 
-IDIR=./include/ \
+IDIR= ./ \
+			./include/ \
 			$(MODULE_cJSON) \
 			$(MODULE_acvImage)/include \
-			$(MODULE_VisSeleFeatureManager)/include \
 			$(MODULE_circleFitting) \
 			$(MODULE_LOGCTRL)/include
 
 ODIR=obj
-_OBJ = MatchingEngine.opp experiment.opp
-ESS_TRACK=$(addsuffix /* ,$(IDIR))
+_OBJ = MatchingEngine.opp MatchingCore.opp FeatureManager.opp
 target_a= $(addsuffix .a ,$(MODULE_NAME))
 
 include ../Makefile.in
