Create a common tool module for...common logic

--- a/common_lib/Makefile
+++ b/common_lib/Makefile
@@ -1,16 +1,13 @@
 
 MODULE_NAME=$(notdir $(basename $(CURDIR)))
 
-IDIR= ./include_priv/ \
-			./include/ \
+IDIR=	./include/ \
 			$(MODULE_cJSON) \
-			$(MODULE_acvImage)/include \
-			$(MODULE_common_lib)/include \
-			$(MODULE_circleFitting) \
+			$(MODULE_acvImage)/include\
 			$(MODULE_LOGCTRL)/include
 
 ODIR=obj
-_OBJ = MatchingEngine.opp MatchingCore.opp FeatureManager.opp
+_OBJ = Util.o
 target_a= $(addsuffix .a ,$(MODULE_NAME))
 ESS_TRACK=$(addsuffix /* ,$(IDIR))
 include ../Makefile.in
