--- a/acvImage/Makefile
+++ b/acvImage/Makefile
@@ -6,8 +6,8 @@ ODIR=obj
 _OBJ = acvImage.opp acvImage_BasicTool.opp acvImage_BasicDrawTool.opp\
  acvImage_MophologyTool.opp acvImage_ToolBox.opp acvImage_ComponentLabelingTool.opp\
  acvImage_SpDomainTool.opp
-
-ifeq ($(OS),Windows_NT)
+ 
+ifeq ($(OS)$(CC),Windows_NTcc)
 target_lib=$(SO_EXPORT_PATH)/libacvImage.dll
 else
 target_lib=$(SO_EXPORT_PATH)/libacvImage.so
