--- a/contrib/zlib/src-1.2.11/win32/Makefile.crossgcc
+++ b/contrib/zlib/src-1.2.11/win32/Makefile.crossgcc
@@ -41,7 +41,7 @@ SHARED_MODE=0
 #LOC = -DASMV
 #LOC = -DZLIB_DEBUG -g
 $(info $(PREFIX))
-CC ?= $(PREFIX)gcc
+CC = $(PREFIX)gcc
 CFLAGS = $(LOC) -O3 -Wall
 
 AS = $(CC)
