Update compile script and example for zlib on Linux

--- a/contrib/zlib/Makefile
+++ b/contrib/zlib/Makefile
@@ -1,9 +1,14 @@
 
 
 .PHONY=domake
-
+curPath=$(abspath ./)
 domake:
-	cd src-1.2.11 ; make -fwin32/Makefile.crossgcc
+	#cd src-1.2.11 ; make -fwin32/Makefile.crossgcc
+	cd src-1.2.11 &&( make || ( \
+		sh ./configure --sharedlibdir=$(curPath)/lib --includedir==$(curPath)/include && \
+		make && \
+		make install\
+	))
 
 clean:
-	cd src-1.2.11 ; make -fwin32/Makefile.crossgcc clean
+	#cd src-1.2.11 ; make -fwin32/Makefile.crossgcc clean
