Update build script for zlib

--- a/contrib/zlib/Makefile
+++ b/contrib/zlib/Makefile
@@ -4,11 +4,14 @@
 curPath=$(abspath ./)
 domake:
 	#cd src-1.2.11 ; make -fwin32/Makefile.crossgcc
-	cd src-1.2.11 &&( make || ( \
+	ls $(curPath)/lib  $(curPath)/include  || \
+	(cd src-1.2.11 &&( \
 		sh ./configure --sharedlibdir=$(curPath)/lib --includedir==$(curPath)/include && \
 		make && \
 		make install\
 	))
 
 clean:
+	cd src-1.2.11 && make clean
+	-rm -r lib include
 	#cd src-1.2.11 ; make -fwin32/Makefile.crossgcc clean
