Update Build scripts

--- a/sidePrj/Makefile
+++ b/sidePrj/Makefile
@@ -4,7 +4,7 @@
 
 
 
-SUB_MAKEFILES = websocket zlib_test
+SUB_MAKEFILES = zlib_test
 #SUB_MAKEFILES = $(MODULE_acvImage) licensePlate $(MODULE_contrib) websocket
 
 include $(MakeTemplate)
