--- a/MatchingEngine/Makefile
+++ b/MatchingEngine/Makefile
@@ -11,7 +11,7 @@ IDIR= ./include_priv/ \
 			$(MODULE_zlib)/include
 
 ODIR=obj
-_OBJ = MatchingEngine.opp MatchingCore.opp FeatureManager.opp FeatureExtractor.opp ContourGrid.opp
+_OBJ = MatchingEngine.opp MatchingCore.opp FeatureManager.opp FeatureExtractor.opp ContourGrid.opp FeatureManager_group.opp 
 target_a= $(addsuffix .a ,$(MODULE_NAME))
 ESS_TRACK=$(addsuffix /* ,$(IDIR))
 include ../Makefile.in
