Add Glew shader setup

--- a/sidePrj/openGL/Makefile
+++ b/sidePrj/openGL/Makefile
@@ -7,9 +7,9 @@ ODIR=obj
 StaticFreeGLutDir=$(abspath ../../../freeglut)
 GLEWSRCDir=$(abspath ../../../glew-2.1.0)
 VPATH+=$(GLEWSRCDir)/src
-_OBJ = test.o glew.o
+_OBJ = test.o shaderPlay.o glew.o
 
-IDIR+=$(StaticFreeGLutDir)/include $(GLEWSRCDir)/include
+IDIR+= ./include $(StaticFreeGLutDir)/include $(GLEWSRCDir)/include
 FLAGS+=-D FREEGLUT_STATIC
 LIBS+=-L$(StaticFreeGLutDir)/lib/x64 -lfreeglut_static -lopengl32 -lwinmm -lgdi32 -Wl,--subsystem,windows
 SUB_MAKEFILES = $(MODULE_acvImage)
