Shader sample texture

--- a/sidePrj/openGL/Makefile
+++ b/sidePrj/openGL/Makefile
@@ -4,13 +4,13 @@ MakeTemplate?=../../Makefile.in
 
 target_bin=test
 ODIR=obj
-StaticFreeGLutDir=$(abspath ../../../freeglut)
 GLEWSRCDir=$(abspath ../../../glew-2.1.0)
+GLFWSRCDir=$(abspath ../../../glfw-3.2.1)
 VPATH+=$(GLEWSRCDir)/src
-_OBJ = test.opp shaderPlay.o glew.o
+_OBJ = test.opp glew.o
 
-IDIR+= ./include $(StaticFreeGLutDir)/include $(GLEWSRCDir)/include
-FLAGS+=-D FREEGLUT_STATIC
-LIBS+=-L$(StaticFreeGLutDir)/lib/x64 -lfreeglut_static -lopengl32 -lwinmm -lgdi32 -Wl,--subsystem,windows
+EXT_OBJS=$(GLFWSRCDir)/lib-mingw-w64/libglfw3.a
+IDIR+= ./include $(GLEWSRCDir)/include  $(GLFWSRCDir)/include
+LIBS+=-lopengl32 -lwinmm -lgdi32
 SUB_MAKEFILES = $(MODULE_acvImage)
 include $(MakeTemplate)
