--- a/sidePrj/openGL/Makefile
+++ b/sidePrj/openGL/Makefile
@@ -1,9 +1,9 @@
 
 export MakeTemplate?=$(abspath ../../Makefile.in)
 
-export GLEWSRCDir=$(abspath ../../../glew-2.1.0)
-export GLFWSRCDir=$(abspath ../../../glfw-3.2.1)
-MODULE_GLACC=$(abspath GLAcc)
+export GLEWSRCDir?=$(abspath ../../../glew-2.1.0)
+export GLFWSRCDir?=$(abspath ../../../glfw-3.2.1)
+export MODULE_GLACC?=$(abspath ../../GLAcc)
 
 SUB_MAKEFILES = $(MODULE_GLACC)
 EXT_OBJS = $(MODULE_GLACC)/GLAcc.a
