--- a/sidePrj/GLSLShaderTest/Makefile
+++ b/sidePrj/GLSLShaderTest/Makefile
@@ -9,9 +9,12 @@ GLFWSRCDir=$(abspath ../../../glfw-3.2.1)
 VPATH+=$(GLEWSRCDir)/src
 _OBJ = test.opp glew.o
 
-EXT_OBJS=$(GLFWSRCDir)/lib-mingw-w64/libglfw3.a
-
 IDIR+= ./include $(GLEWSRCDir)/include $(GLFWSRCDir)/include
-LIBS+=-L$(StaticFreeGLutDir)/lib/x64 -lopengl32 -lwinmm -lgdi32 -Wl,--subsystem,windows
+ifeq ($(OS),Windows_NT)
+	EXT_OBJS += $(GLFWSRCDir)/lib-mingw-w64/libglfw3.a
+	LIBS+=-lopengl32 -lwinmm -lgdi32
+else
+	LIBS+= -lglfw3 -framework Cocoa -framework OpenGL -framework IOKit -framework CoreVideo
+endif
 SUB_MAKEFILES = $(MODULE_acvImage)
 include $(MakeTemplate)
