--- a/sidePrj/MinGW_MindVision/Makefile
+++ b/sidePrj/MinGW_MindVision/Makefile
@@ -5,5 +5,6 @@ _OBJ = GIGE_CAM.opp
 target_bin = GIGE_CAM
 
 EXT_OBJS?=MVCAMSDK.lib
+FLAGS=-static-libgcc
 export MakeTemplate:= $(abspath ../../Makefile.in)
 include $(MakeTemplate)
