Windows compile fix, ESS_TRACK header focus wildcard, zlib link for windows build

--- a/contrib/lodepng/Makefile
+++ b/contrib/lodepng/Makefile
@@ -8,4 +8,8 @@ _OBJ =lodepng_util.opp lodepng.opp pngdetail.opp
 target_a=lodepng.a
 FLAGS=  -ansi -pedantic -Wall -Wextra -o pngdetail -O3
 
+ifeq ($(OS)$(CC),Windows_NTcc)
+FLAGS+= -std=gnu++11
+endif
+
 include $(MakeTemplate)
