--- a/sidePrj/zlib_test/Makefile
+++ b/sidePrj/zlib_test/Makefile
@@ -4,10 +4,13 @@ _OBJ = zlib_test.o
 
 target_bin = zlib_test
 
-LDIR=./ $(MODULE_zlib)/lib
-LIBS=-lz
 
-
+ifeq ($(OS)$(CC),Windows_NTcc)
+	EXT_OBJS= $(MODULE_zlib)/staticlib/libz.a
+else
+	LDIR=$(MODULE_zlib)/lib
+	LIBS=-lz
+endif
 
 export MakeTemplate:= $(abspath Makefile.in)
 include $(MakeTemplate)
