Update websocket DataChannel structure. TODO: message callback

--- a/DataChannel/Makefile
+++ b/DataChannel/Makefile
@@ -2,7 +2,7 @@
 target_a = DataChannel.a
 IDIR = $(MODULE_cwebsocket)/lib/ $(MODULE_acvImage)/include/ include include_priv
 VPATH = $(MODULE_cwebsocket)/lib/
-_OBJ = DatCH_WebSocket.opp websocket.o
+_OBJ = DatCH_WebSocket.opp websocket.o ws_server_util.opp
 
 ESS_TRACK=include/*
 export MakeTemplate?= $(abspath ../Makefile.in)
