Extract FeatureManager_sig360_circle_line out of FeatureManager file, and some log and exception handle

--- a/MatchingEngine/Makefile
+++ b/MatchingEngine/Makefile
@@ -14,7 +14,7 @@ IDIR= ./include_priv/ \
 VPATH = ./ ./MorphEngine
 ODIR=obj
 _OBJ = MatchingEngine.opp MatchingCore.opp FeatureManager.opp FeatureExtractor.opp ContourGrid.opp \
-			 FeatureManager_group.opp FeatureManager_platingCheck.opp \
+			 FeatureManager_group.opp FeatureManager_platingCheck.opp FeatureManager_sig360_circle_line.opp \
 			 MorphEngine.opp
 target_a= $(addsuffix .a ,$(MODULE_NAME))
 ESS_TRACK=$(wildcard $(addsuffix /*.h* ,$(IDIR)))
