--- a/UI/hy/newSmapleSetup/package.json
+++ b/UI/hy/newSmapleSetup/package.json
@@ -19,9 +19,11 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
     "babel-register": "^6.6.0",
+    "create-react-class": "^15.6.3",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "json-loader": "^0.5.4",
+    "react-resize-detector": "^3.1.2",
     "style-loader": "^0.23.0",
     "url-loader": "^1.1.1",
     "webpack": "^4.17.2",
