add npm run-script dev

--- a/UI/hy/newSmapleSetup/package.json
+++ b/UI/hy/newSmapleSetup/package.json
@@ -39,7 +39,7 @@
     "build-w-android": "set NOTIMON_PRJ=deploy&&webpack --progress --colors --watch",
     "build-opt-android": "NODE_ENV=production NOTIMON_PRJ=deploy webpack --progress --colors --watch",
     "build-win-android": "set NODE_ENV=production&&set NOTIMON_PRJ=deploy&&webpack --progress --colors --watch",
-    "dev": "webpack-dev-server --devtool eval --progress --colors --content-base "
+    "dev": "webpack-dev-server --mode development --open --hot"
   },
   "repository": {
     "type": "git",
