--- a/UI/hy/newSmapleSetup/package.json
+++ b/UI/hy/newSmapleSetup/package.json
@@ -10,7 +10,9 @@
     "react-dom": "^16.5.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "react-resize-detector": "^3.1.2",
+    "create-react-class": "^15.6.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -19,11 +21,9 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
     "babel-register": "^6.6.0",
-    "create-react-class": "^15.6.3",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "json-loader": "^0.5.4",
-    "react-resize-detector": "^3.1.2",
     "style-loader": "^0.23.0",
     "url-loader": "^1.1.1",
     "webpack": "^4.19.0",
