--- a/UI/hy/newSmapleSetup/package.json
+++ b/UI/hy/newSmapleSetup/package.json
@@ -5,6 +5,8 @@
   "main": "script.js",
   "dependencies": {
     "create-react-class": "^15.6.3",
+    "cytoscape": "^3.2.16",
+    "cytoscape-cose-bilkent": "^4.0.0",
     "jsonp": "^0.2.0",
     "react": "^16.5.1",
     "react-addons-css-transition-group": "^15.3.0",
