Update AUX_POINT & ANGLE measure

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,12 @@
 {
   "files.associations": {
     "xstring": "cpp",
-    "vector": "cpp"
+    "vector": "cpp",
+    "cmath": "cpp",
+    "type_traits": "cpp",
+    "utility": "cpp",
+    "xmemory0": "cpp",
+    "xtr1common": "cpp",
+    "xutility": "cpp"
   }
 }
