Update search point(20%) and angle measure logic(include flip)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,8 @@
     "limits": "c",
     "memory": "c",
     "ratio": "c",
-    "tuple": "c"
+    "tuple": "c",
+    "system_error": "cpp",
+    "xlocale": "cpp"
   }
 }
