Milestone: line and arc directional edge point selection

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,11 @@
     "ratio": "c",
     "tuple": "c",
     "system_error": "cpp",
-    "xlocale": "cpp"
+    "xlocale": "cpp",
+    "istream": "cpp",
+    "xlocmon": "cpp",
+    "xlocnum": "cpp",
+    "xloctime": "cpp",
+    "cstdlib": "cpp"
   }
 }
