Add line matching initial keypoint generation and initial search. Also fix vector swap issue if the target is flipped

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,15 @@
     "xlocmon": "cpp",
     "xlocnum": "cpp",
     "xloctime": "cpp",
-    "cstdlib": "cpp"
+    "cstdlib": "cpp",
+    "__config": "cpp",
+    "__nullptr": "cpp",
+    "cstddef": "cpp",
+    "exception": "cpp",
+    "initializer_list": "cpp",
+    "new": "cpp",
+    "stdexcept": "cpp",
+    "typeinfo": "cpp",
+    "algorithm": "cpp"
   }
 }
