Add CameraLayer_BMP for BMP loading

--- a/CameraLayer/Makefile
+++ b/CameraLayer/Makefile
@@ -1,8 +1,12 @@
 
-IDIR = include 
-_OBJ = cameraLayer.opp
 
-target_obj = cameraLayer.a
+MODULE_acvImage?=../acvImage
 
+IDIR = include $(MODULE_acvImage)/include/
+_OBJ = CameraLayer.opp CameraLayer_BMP.opp
+
+target_a = CameraLayer.a
+
+ESS_TRACK=$(wildcard $(addsuffix /*.h* ,$(IDIR)))
 export MakeTemplate:= $(abspath ../Makefile.in)
 include $(MakeTemplate)
