--- a/MatchingEngine/Makefile
+++ b/MatchingEngine/Makefile
@@ -8,7 +8,7 @@ IDIR= ./include_priv/ \
 			$(MODULE_acvImage)/include \
 			$(MODULE_common_lib)/include \
 			$(MODULE_circleFitting) \
-			$(MODULE_LOGCTRL)/include\
+			$(MODULE_logctrl)/include\
 			$(MODULE_zlib)/src
 
 VPATH = ./ ./MorphEngine
