Add long ass warning error

--- a/CameraLayer/Makefile
+++ b/CameraLayer/Makefile
@@ -5,7 +5,7 @@ MODULE_MindVision_GIGE?=../contrib/MindVision_GIGE
 IDIR = include \
 			$(MODULE_acvImage)/include/ \
 			$(MODULE_MindVision_GIGE)/include/ \
-			$(MODULE_LOGCTRL)/include \
+			$(MODULE_logctrl)/include \
 
 _OBJ = CameraLayer.opp CameraLayer_BMP.opp CameraLayer_GIGE_MindVision.opp
 
