Add thread lock for main and camera image thread to send socket data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,40 @@
     "new": "cpp",
     "stdexcept": "cpp",
     "typeinfo": "cpp",
-    "algorithm": "cpp"
+    "algorithm": "cpp",
+    "array": "cpp",
+    "*.tcc": "cpp",
+    "cctype": "cpp",
+    "clocale": "cpp",
+    "condition_variable": "cpp",
+    "cstdint": "cpp",
+    "cstdio": "cpp",
+    "ctime": "cpp",
+    "cwchar": "cpp",
+    "cwctype": "cpp",
+    "deque": "cpp",
+    "unordered_map": "cpp",
+    "fstream": "cpp",
+    "iomanip": "cpp",
+    "iosfwd": "cpp",
+    "iostream": "cpp",
+    "mutex": "cpp",
+    "ostream": "cpp",
+    "sstream": "cpp",
+    "streambuf": "cpp",
+    "thread": "cpp",
+    "cstring": "cpp",
+    "ios": "cpp",
+    "list": "cpp",
+    "queue": "cpp",
+    "string": "cpp",
+    "xthread": "cpp",
+    "xfacet": "cpp",
+    "xfunctional": "cpp",
+    "xhash": "cpp",
+    "xiosbase": "cpp",
+    "xlocinfo": "cpp",
+    "xmemory": "cpp",
+    "xstddef": "cpp"
   }
 }
