--- a/UI/hy/newSmapleSetup/package.json
+++ b/UI/hy/newSmapleSetup/package.json
@@ -27,6 +27,8 @@
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "json-loader": "^0.5.4",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.20.2",
