--- a/UI/hy/newSmapleSetup/package.json
+++ b/UI/hy/newSmapleSetup/package.json
@@ -4,6 +4,8 @@
   "description": "Just a React play ground",
   "main": "script.js",
   "dependencies": {
+    "@antv/data-set": "^0.10.1",
+    "@antv/g2": "^3.4.8",
     "antd": "^3.11.6",
     "create-react-class": "^15.6.3",
     "cytoscape": "^3.3.0",
