--- a/UI/hy/newSmapleSetup/package.json
+++ b/UI/hy/newSmapleSetup/package.json
@@ -11,6 +11,7 @@
     "cytoscape": "^3.3.0",
     "cytoscape-cose-bilkent": "^4.0.0",
     "jsonp": "^0.2.0",
+    "loglevel": "^1.6.1",
     "react": "^16.7.0",
     "react-addons-css-transition-group": "^15.3.0",
     "react-dom": "^16.7.0",
