Add Distortion adjustment in sig360 feature extraction and update FeatureMatching interface for type mathching

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,7 @@
     "xiosbase": "cpp",
     "xlocinfo": "cpp",
     "xmemory": "cpp",
-    "xstddef": "cpp"
+    "xstddef": "cpp",
+    "common_lib.h": "c"
   }
 }
