--- a/UI/hy/newSmapleSetup/package.json
+++ b/UI/hy/newSmapleSetup/package.json
@@ -41,6 +41,7 @@
     "webpack-shell-plugin": "^0.5.0"
   },
   "scripts": {
+    "start-electron": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "build-w": "webpack --progress --colors --watch",
