--- a/UI/hy/newSmapleSetup/package.json
+++ b/UI/hy/newSmapleSetup/package.json
@@ -12,6 +12,8 @@
     "cytoscape-cose-bilkent": "^4.0.0",
     "jsonp": "^0.2.0",
     "loglevel": "^1.6.1",
+    "mongodb": "^3.1.13",
+    "mongoose": "^5.4.11",
     "react": "^16.7.0",
     "react-addons-css-transition-group": "^15.3.0",
     "react-dom": "^16.7.0",
