Update for windows build issue fix and webpack bundle size profiling

--- a/InspectionCore/contrib/SOIL/Makefile
+++ b/InspectionCore/contrib/SOIL/Makefile
@@ -10,5 +10,5 @@ _OBJ =image_DXT.o image_helper.o SOIL.o stb_image_aug.o
 target_a=SOIL.a
 
  
-FLAGS= -w -O3 -Wnoc++11-narrowing
+FLAGS= -w -O3 -Wno-narrowing
 include $(MakeTemplate)
