--- a/UI/WebUI/package.json
+++ b/UI/WebUI/package.json
@@ -38,6 +38,7 @@
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.28.2",
+    "webpack-bundle-analyzer": "^3.0.4",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14",
     "webpack-shell-plugin": "^0.5.0"
@@ -46,6 +47,8 @@
     "start-electron": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
+    "build-profile": "webpack --profile --json > wstats.json",
+    "bundle-analyzer": "webpack-bundle-analyzer wstats.json -m server",
     "build-w": "webpack --progress --colors --watch",
     "build-opt": "set NODE_ENV=production&&webpack --optimize-minimize",
     "build-w-android": "set NOTIMON_PRJ=deploy&&webpack --progress --colors --watch",
