--- a/DB/M_DB/hy_mdb/package.json
+++ b/DB/M_DB/hy_mdb/package.json
@@ -10,11 +10,13 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-graphql": "^0.7.1",
+    "graphql": "^14.1.1",
     "http-errors": "~1.6.2",
     "mongoose": "^5.4.12",
     "morgan": "~1.9.0",
     "nodemon": "^1.18.10",
-    "pug": "2.0.0-beta11"
+    "pug": "^2.0.3"
   },
   "devDependencies": {
     "html-webpack-plugin": "^3.2.0",
