--- a/UI/WebUI/package.json
+++ b/UI/WebUI/package.json
@@ -3,6 +3,17 @@
   "version": "1.0.0",
   "description": "Just a React play ground",
   "main": "script.js",
+  "babel": {
+    "plugins": [
+      [
+        "import",
+        {
+          "libraryName": "antd",
+          "style": true
+        }
+      ]
+    ]
+  },
   "dependencies": {
     "@antv/data-set": "^0.10.1",
     "@antv/g2": "^3.4.8",
@@ -26,6 +37,7 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-plugin-import": "^1.11.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
