Add defFileName setting and featureSet_sha1(sha1(root.featureSet)) with jsum

--- a/UI/WebUI/package.json
+++ b/UI/WebUI/package.json
@@ -22,7 +22,9 @@
     "create-react-class": "^15.6.3",
     "cytoscape": "^3.3.0",
     "cytoscape-cose-bilkent": "^4.0.0",
+    "dateformat": "^3.0.3",
     "jsonp": "^0.2.0",
+    "jsum": "^0.1.4",
     "loglevel": "^1.6.1",
     "react": "^16.7.0",
     "react-addons-css-transition-group": "^15.3.0",
