--- a/UI/WebUI/package.json
+++ b/UI/WebUI/package.json
@@ -26,9 +26,11 @@
     "jsonp": "^0.2.0",
     "jsum": "^0.1.4",
     "loglevel": "^1.6.1",
+    "plotly.js": "^1.45.1",
     "react": "^16.7.0",
     "react-addons-css-transition-group": "^15.3.0",
     "react-dom": "^16.7.0",
+    "react-plotly.js": "^2.3.0",
     "react-redux": "^5.1.1",
     "react-resize-detector": "^3.2.1",
     "redux": "^4.0.1",
