Add a simple graph to Inspection UI & import size reduce

--- a/UI/WebUI/package.json
+++ b/UI/WebUI/package.json
@@ -52,6 +52,7 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.28.2",
     "webpack-bundle-analyzer": "^3.0.4",
@@ -62,8 +63,9 @@
   "scripts": {
     "start-electron": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "build-profile": "webpack --profile --json > wstats.json",
+    "build-linux": "export NODE_ENV=production ; webpack",
+    "build-win": "SET NODE_ENV=production webpack",
+    "build-profile": "export NODE_ENV=production ; webpack --profile --json > wstats.json",
     "bundle-analyzer": "webpack-bundle-analyzer wstats.json -m server",
     "build-w": "webpack --progress --colors --watch",
     "build-opt": "set NODE_ENV=production&&webpack --optimize-minimize",
