--- a/UI/WebUI/package.json
+++ b/UI/WebUI/package.json
@@ -18,6 +18,7 @@
     "@antv/data-set": "^0.10.1",
     "@antv/g2": "^3.4.8",
     "antd": "^3.13.6",
+    "chart.js": "^2.7.3",
     "clone": "^2.1.2",
     "create-react-class": "^15.6.3",
     "cytoscape": "^3.3.0",
@@ -29,6 +30,7 @@
     "plotly.js": "^1.45.1",
     "react": "^16.7.0",
     "react-addons-css-transition-group": "^15.3.0",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.7.0",
     "react-plotly.js": "^2.3.0",
     "react-redux": "^5.1.1",
