--- a/UI/WebUI/package.json
+++ b/UI/WebUI/package.json
@@ -19,6 +19,7 @@
     "@antv/g2": "^3.4.8",
     "antd": "^3.13.6",
     "chart.js": "^2.7.3",
+    "chartjs-plugin-annotation": "^0.5.7",
     "clone": "^2.1.2",
     "create-react-class": "^15.6.3",
     "cytoscape": "^3.3.0",
