WebUI: use cross-env to deal with the env param in npm

--- a/UI/WebUI/package.json
+++ b/UI/WebUI/package.json
@@ -49,6 +49,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
     "babel-register": "^6.6.0",
+    "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
     "file-loader": "^2.0.0",
     "json-loader": "^0.5.4",
@@ -66,9 +67,8 @@
   "scripts": {
     "start-electron": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-linux": "export NODE_ENV=production ; webpack",
-    "build-win": "set NODE_ENV=production; webpack",
-    "build-profile": "export NODE_ENV=production ; webpack --profile --json > wstats.json",
+    "build": "cross-env NODE_ENV=production webpack",
+    "build-profile": "cross-env NODE_ENV=production webpack --profile --json > wstats.json",
     "bundle-analyzer": "webpack-bundle-analyzer wstats.json -m server",
     "build-w": "webpack --progress --colors --watch",
     "build-opt": "set NODE_ENV=production&&webpack --optimize-minimize",
