Add make export EXPORT_PATH=.. and make release for better release flow

--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,12 @@
 *.so
 *.dll
 data
+release_export/
 obj
-visSele*
+InspectionCore/visSele*
 *.a
 *.jpg
 **/.idea
-licensePlate
-sidePrj/websocket/main
 UI/hy/js/jquery-tree
 UI/hy/js/jstree
 UI/hy/Editor174
