--- a/UI/WebUI/package.json
+++ b/UI/WebUI/package.json
@@ -70,6 +70,7 @@
     "build": "cross-env NODE_ENV=production webpack",
     "build-profile": "cross-env NODE_ENV=production webpack --profile --json > wstats.json",
     "bundle-analyzer": "webpack-bundle-analyzer wstats.json -m server",
+    "export": "sh export.sh ../../release_export/",
     "build-w": "webpack --progress --colors --watch",
     "build-opt": "set NODE_ENV=production&&webpack --optimize-minimize",
     "build-w-android": "set NOTIMON_PRJ=deploy&&webpack --progress --colors --watch",
