Inspection send result to ws://hyv.decade.tw:8010

--- a/UI/WebUI/package.json
+++ b/UI/WebUI/package.json
@@ -39,6 +39,7 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "text-encoding": "^0.7.0",
+    "localStorage": "^1.0.4",
     "xstate": "^3.3.3"
   },
   "devDependencies": {
