--- a/DB/apollo_gql_server/package.json
+++ b/DB/apollo_gql_server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
+    "dev": "nodemon index.js",
     "mstart": "nodemon index.js"
   },
   "keywords": [],
@@ -16,10 +17,17 @@
     "express": "^4.16.4",
     "express-ws": "^4.0.0",
     "graphql": "^14.1.1",
+    "idb": "^4.0.3",
     "mongoose": "^5.4.13",
     "nodemon": "^1.18.10"
   },
   "devDependencies": {
-    "babel-register": "^6.26.0"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-import": "^1.11.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-2": "^6.5.0",
+    "babel-register": "^6.6.0"
   }
 }
